# mseller_ecf

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: docker-frappe.md  operations.md
mseller_ecf/: hooks.py  modules.txt
mseller_ecf/config/: desktop.py
mseller_ecf/mseller_ecf/: install.py  sequence.py  utils.py
mseller_ecf/mseller_ecf/api/: client.py  exceptions.py  public.py
mseller_ecf/mseller_ecf/dashboard/: common.py  sales_invoice.py
mseller_ecf/mseller_ecf/doctype/mseller_ecf_document/: mseller_ecf_document.js  mseller_ecf_document.json  mseller_ecf_document.py  mseller_ecf_document_list.js
mseller_ecf/mseller_ecf/doctype/mseller_ecf_sequence/: mseller_ecf_sequence.js  mseller_ecf_sequence.json  mseller_ecf_sequence.py  mseller_ecf_sequence_list.js
mseller_ecf/mseller_ecf/doctype/mseller_ecf_settings/: mseller_ecf_settings.json  mseller_ecf_settings.py
mseller_ecf/mseller_ecf/doctype/mseller_ecf_uom_mapping/: mseller_ecf_uom_mapping.json  mseller_ecf_uom_mapping.py
mseller_ecf/mseller_ecf/events/: purchase_invoice.py  sales_invoice.py
mseller_ecf/mseller_ecf/jobs/: send_document.py  sequence_sync.py  status_sync.py
mseller_ecf/mseller_ecf/mapper/: purchase_invoice.py  sales_invoice.py
mseller_ecf/public/js/: purchase_invoice.js  sales_invoice.js
mseller_ecf/translations/: es.csv
